--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,5 +10,6 @@
 
 @import './components/nav.css';
 @import './components/toggle.css';
+@import './components/sidebar.css';
 
 /* @import './pages/dashboard.css'; */
