style: timer clock

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,5 +11,6 @@
 @import './components/nav.css';
 @import './components/toggle.css';
 @import './components/sidebar.css';
+@import './components/timerclock.css';
 
 /* @import './pages/dashboard.css'; */
