style: cartoon score

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,8 @@
 @import './base/root.css';
 @import './base/reset.css';
 
+
+@import './utilities/flex.css';
 @import './utilities/typography.css';
 
 @import './components/nav.css';
