--- a/src/css/pages/dashboard.css
+++ b/src/css/pages/dashboard.css
@@ -1,71 +1,176 @@
 .main-wrapper {
-    display: flex;
-    min-height: 85vh;
-    margin-top: 2rem;
+  display: flex;
+  min-height: 85vh;
+  margin-top: 2rem;
 }
 
 .sidebar {
-    width: 20%;
-    border-right: 1px solid var(--clr-secondary-light);
-    margin-top: 2rem;
+  max-width: 20%;
+  border-right: 1px solid var(--clr-secondary-light);
+  margin-top: 2rem;
 }
 
 .main {
-    width: 50%;
+  width: 60%;
 }
 
 .cartoon {
-    width: 30%;
-    border-left: 1px solid var(--clr-secondary-light);
-
+  flex-grow: 1;
+  border-left: 1px solid var(--clr-secondary-light);
 }
 
 .main {
-    padding: 1rem 3rem;
+  padding: 1rem 3rem;
 }
 
 .main-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 55vh;
-    border: 1px solid #e5e7eb;
-    width: 100%;
-    margin-top: 3rem;
-    gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 55vh;
+  border: 1px solid #e5e7eb;
+  width: 100%;
+  margin-top: 3rem;
+  gap: 2rem;
 }
 
 .timer {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .options {
-    width: 40%;
+  width: 40%;
 }
 
 .main-content .btn-primary {
-    border: none;
-    background-color: var(--clr-primary-400);
-    padding: 1rem 4rem;
-    color: white;
-    font-size: 1.2rem;
-    border-radius: 10px;
-    margin-top: 1rem;
-    cursor: pointer;
+  border: none;
+  background-color: var(--clr-primary-400);
+  padding: 1rem 4rem;
+  color: white;
+  font-size: 1.2rem;
+  border-radius: 10px;
+  margin-top: 1rem;
+  cursor: pointer;
 }
 
 .cta {
-    margin: 1rem;
-    width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  margin: 1rem;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .btn-primary:hover {
-    background-color: var(--clr-primary-500);
-} 
+  background-color: var(--clr-primary-500);
+}
+
+@media screen and (max-width: 1300px) {
+  .sidebar-links i {
+    font-size: 1.5rem;
+  }
+  .sidebar-links span {
+    display: none;
+  }
+
+  .main {
+    width: 75%;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .cartoon {
+    display: none;
+  }
+
+  .sidebar-links {
+    margin: 1rem;
+  }
+
+  .sidebar-links li {
+    padding: 1rem;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .main-wrapper,
+  .sidebar {
+    margin-top: 1rem;
+  }
+
+  .sidebar-links {
+    padding: 0.5rem;
+  }
+
+  .sidebar-links li {
+    padding: 1rem 0;
+  }
+
+  .sidebar-links i {
+    font-size: 1.25rem;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+    font-weight: 500;
+    
+    /* display: none; */
+  }
+
+  .main {
+    width: 100%;
+    padding: 1rem;
+  }
+
+  .main-content {
+    margin-top: 1.5rem;
+    /* border: none; */
+    padding: 1rem;
+    gap: 0.5rem;
+    height: auto;
+  }
+
+  .timer {
+    flex-direction: column;
+  }
+
+  .timer-clock
+   {
+    width: 100%;
+  }
+
+  .timer-clock {
+    text-align: center;
+    align-items: center;
+  }
+
+  .options {
+    margin: 3rem;
+    width: 80%;
+  }
+
+  .cta {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 500px) {
+
+  .main-content {
+    margin-top: 1.5rem;
+    border: none;
+  }
+
+  h1 {
+    display: none;
+  }
+  
+  .options {
+    width: 100%;
+  }
+
+}
