routes added and timer

--- a/src/css/base/reset.css
+++ b/src/css/base/reset.css
@@ -40,6 +40,11 @@ select {
   font: inherit;
 }
 
+a {
+  text-decoration: none;
+  color: inherit
+}
+
 /* Remove all animations, for users who have turned them off */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
