feat: notification & exercise page

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,7 @@
 @import './components/toggle.css';
 @import './components/sidebar.css';
 @import './components/timerclock.css';
+@import './components/modal.css';
 
 @import './pages/dashboard.css';
 @import './pages/care.css';
