--- a/src/css/components/modal.css
+++ b/src/css/components/modal.css
@@ -4,7 +4,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(156, 163, 175, 0.1);
+  background: rgba(121, 127, 136, 0.4);
+  z-index: 9999;
 }
 
 .modal {
@@ -12,7 +13,7 @@
   max-width: 480px;
   margin: 200px auto;
   background: #fff;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: var(--bs-gray-dark);
 }
 
